--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,6 @@
 # logger options: ALL -> DEBUG -> INFO -> WARN -> ERROR -> FATAL -> OFF
 # Root logger option
-log4j.rootLogger=ALL, file, stdout
+log4j.rootLogger=INFO, file, stdout
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 #log4j.appender.file.File=C:\\logging.log
